fix: 상하 스크롤 overflow 문제 수정

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,9 @@
 :host {
+  display: block;
+  margin-bottom: 50px;
+}
+
+::ng-deep router-outlet + * {
+  display: block;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
