--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,11 +10,15 @@ html {
 }
 
 body {
-  font-family: "NeoDunggeunmo";
+  font-family: "NeoDunggeunmo", sans-serif;
   background-color: $bg;
   color: $text;
-  height: 100vh;
   margin: 0;
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 main {
@@ -41,7 +45,6 @@ p {
   right: -5em;
   width: 10em;
   min-height: 4em;
-  // border: 2px solid black;
   background-color: white;
   color: black;
   font-size: 0.7em;
@@ -93,6 +96,8 @@ p {
     box-sizing: border-box;
     cursor: pointer;
     text-decoration: none;
+    background-color: $bg;
+    font-family: inherit;
     i {
       font-size: 0.8em;
       &::after {
@@ -103,6 +108,11 @@ p {
     &:focus,
     &:hover {
       color: yellow;
+    }
+    &.disabled,
+    &:disabled {
+      color: gray;
+      cursor: initial;
     }
   }
   .action ~ .action {
